--- a/apps/templates/includes/menu.html
+++ b/apps/templates/includes/menu.html
@@ -1,10 +1,49 @@
 <div class="mt-3">
-    <a href="{% url "repository" slug=slug %}" class="btn btn-outline-dark btn-sm active" disabled>Información básica</a>
-    <a href="{% url "description" slug=slug %}" class="btn btn-outline-dark btn-sm" disabled>Descripción de software</a>
-    <a href="{% url "categorization" slug=slug %}" class="btn btn-outline-dark btn-sm" disabled>categorización</a>
-    <a href="#" class="btn btn-outline-dark btn-sm" disabled>Carácteristicas</a>
-    <a href="#" class="btn btn-outline-dark btn-sm" disabled>Arquitectura</a>
-    <a href="#" class="btn btn-outline-dark btn-sm" disabled>Instalación y configuración</a>
-    <a href="#" class="btn btn-outline-dark btn-sm" disabled>Autor(es)</a>
-    <a href="#" class="btn btn-outline-dark btn-sm" disabled>Solución de problemas</a>
+    <div class="radio-buttons">
+        <label class="radio" id="id_button_1">
+            <a href="{% url "repository" slug=slug %}">
+                <input type="radio" name="radio" checked="">
+                <span class="name">Información básica</span>
+            </a>
+        </label>
+        <label class="radio" id="id_button_2">
+            <a href="{% url "category_license" slug=slug %}">
+                <input type="radio" name="radio">
+                <span class="name">Caracterización</span>
+            </a>
+        </label>
+        <label class="radio" id="id_button_3">
+            <a href="{% url "categorization" slug=slug %}">
+                <input type="radio" name="radio" >
+                <span class="name">Caracteristicas</span>
+            </a>
+        </label>
+        <label class="radio" id="id_button_4">
+            <a href="{% url "categorization" slug=slug %}">
+                <input type="radio" name="radio" >
+                <span class="name">Arquitectura</span>
+            </a>
+        </label>
+        <label class="radio" id="id_button_5">
+            <a href="{% url "categorization" slug=slug %}">
+                <input type="radio" name="radio" >
+                <span class="name">Instalación y configuración</span>
+            </a>
+        </label>
+        <label class="radio" id="id_button_6">
+            <a href="{% url "categorization" slug=slug %}">
+                <input type="radio" name="radio" >
+                <span class="name">Autor(es)</span>
+            </a>
+        </label>
+        <label class="radio" id="id_button_7">
+            <a href="{% url "categorization" slug=slug %}">
+                <input type="radio" name="radio" >
+                <span class="name">Solución de problemas</span>
+            </a>
+        </label>
+    </div>
 </div>
+
+<script>
+</script>
