--- a/apps/templates/includes/menu.html
+++ b/apps/templates/includes/menu.html
@@ -7,7 +7,7 @@
             </a>
         </label>
         <label class="radio" id="id_button_2">
-            <a href="{% url "category_license" slug=slug %}">
+            <a href="{% url "version" slug=slug %}">
                 <input type="radio" name="radio">
                 <span class="name">Caracterización</span>
             </a>
