--- a/apps/templates/dashboard/index.html
+++ b/apps/templates/dashboard/index.html
@@ -29,22 +29,22 @@
                 {% block subcontent %}
                     {% if repositories %}
                     <div class="container">
-                        <div class="card">
-                            <div class="card-body">
+                        <div class="">
+                            <div class="">
                                 <table class="table table-borderless">
-                                    <thead>
+                                    <thead class="border">
                                       <tr>
-                                        <th scope="col">Software</th>
-                                        <th scope="col">Propietario</th>
-                                        <th scope="col">Última modificación</th>
-                                        <th scope="col">Última versión</th>
-                                        <th scope="col"></th>
+                                        <th class="text-dark fw-bold h6 bg-body-tertiary">Software</th>
+                                        <th class="text-dark fw-bold h6 bg-body-tertiary">Description</th>
+                                        <th class="text-dark fw-bold h6 bg-body-tertiary">Propietario</th>
+                                        <th class="text-dark fw-bold h6 bg-body-tertiary">Modificación</th>
+                                        <th class="text-dark fw-bold h6 bg-body-tertiary"></th>
                                       </tr>
                                     </thead>
                                     <tbody>
                                         {% for repo in repositories %}
                                         <tr>
-                                            <th class="w-50">
+                                            <th class="w-25 ">
                                                 <a class="icon-link text-dark" href="{% url "repository" slug=repo.slug %}">
                                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-folder" viewBox="0 0 16 16">
                                                         <path d="M.54 3.87.5 3a2 2 0 0 1 2-2h3.672a2 2 0 0 1 1.414.586l.828.828A2 2 0 0 0 9.828 3h3.982a2 2 0 0 1 1.992 2.181l-.637 7A2 2 0 0 1 13.174 14H2.826a2 2 0 0 1-1.991-1.819l-.637-7a2 2 0 0 1 .342-1.31zM2.19 4a1 1 0 0 0-.996 1.09l.637 7a1 1 0 0 0 .995.91h10.348a1 1 0 0 0 .995-.91l.637-7A1 1 0 0 0 13.81 4zm4.69-1.707A1 1 0 0 0 6.172 2H2.5a1 1 0 0 0-1 .981l.006.139q.323-.119.684-.12h5.396z"/>
@@ -52,15 +52,9 @@
                                                     {{ repo.title.capitalize }}
                                                 </a>
                                             </th>
-                                            <td>Mark</td>
+                                            <td>{{repo.description}}</td>
+                                            <td>{{user}}</td>
                                             <td>{{ repo.updated_at }}</td>
-                                            <td>
-                                                {% if repo.version %}
-                                                    {{ repo.version }}
-                                                {% else %}
-                                                    --;--
-                                                {% endif %}
-                                            </td>
                                             <td>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
                                                     <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
