--- a/apps/templates/repository/detail.html
+++ b/apps/templates/repository/detail.html
@@ -25,92 +25,33 @@
 <div class="container mt-5">
     {% block subcontent %}
     <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <table class="table table table-borderless">
-                    <tr>
-                        <th scope="col">Software</th>
-                        <td>
-                            {{ software.title }}
-                        </td>
-                    </tr>    
-                </table>
-            </div>
-            <div class="col-sm-8">
-                <table class="table table table-borderless">
-                    <tr>
-                        <th scope="col">Tipo de programa</th>
-                        <td>
-                            {{ software.description }}
-                        </td>
-                    </tr>    
-                </table>
-            </div>
-        </div>
-    </div>
-    <div class="container mt-2 p-3">
-        <div class="row">
-            <div class="col-sm">
-                <table class="table table table-borderless">
-                    <tr>
-                        <th scope="col">Software</th>
-                        <td>
-                            {{ software.title }}
-                        </td>
-                    </tr>    
-                    <tr>
-                        <th scope="col">Tipo de programa</th>
-                        <td>
-                            {{ software.description }}
-                        </td>
-                    </tr>    
-                    <tr>
-                        <th scope="col">Tipo de programa</th>
-                        <td>N/A</td>
-                    </tr>    
-                </table>
-            </div>
-            <div class="col-sm">
-                <table class="table table table-borderless">
-                    <tr>
-                        <th scope="col">Lanzamiento</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th scope="col">Última version</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th scope="col">Licencia</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th scope="col">País de origen</th>
-                        <td>N/A</td>
-                    </tr>
-                </table>
-            </div>
-            <div class="col-sm">
-                <table class="table table table-borderless">
-                    <tr>
-                        <th scope="col">Lanzamiento</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th scope="col">Última version</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th scope="col">Licencia</th>
-                        <td>N/A</td>
-                    </tr>
-                    <tr>
-                        <th scope="col">País de origen</th>
-                        <td>N/A</td>
-                    </tr>
-                </table>
+        <div class="card shadow p-1 mb-3 rounded">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <table class="table table-borderless">
+                            <tr>
+                                <th scope="col">Software</th>
+                                <td>
+                                    {{ software.title }}
+                                </td>
+                            </tr>    
+                        </table>
+                    </div>
+                    <div class="col-sm-8">
+                        <table class="table table table-borderless">
+                            <tr>
+                                <th scope="col">Descripción</th>
+                                <td>
+                                    {{ software.description }}
+                                </td>
+                            </tr>    
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
+
     </div>
 
     <a href="{% url "description" slug=software.slug %}" class="btn btn-sm btn-outline-dark">Editar</a>
