--- a/apps/templates/includes/navbar.html
+++ b/apps/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-white p-2">
   <div class="d-flex justify-content-between" style="width:100%;">
 
-    <a class="navbar-brand" href="{% url 'dashboard' %}">Nombre aplicacion</a>
+    <a class="navbar-brand" href="{% url 'dashboard' %}">{{app.name.upper}}</a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -12,7 +12,7 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Proyectos
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Action</a></li>
