--- a/apps/templates/repository/category_license.html
+++ b/apps/templates/repository/category_license.html
@@ -14,7 +14,7 @@
                 Tipo de Licencia de {{software}}
             </h1>
             <span class="text-secondary text-center">
-                El mundo del software se rige por dos tipos de licencias que definen los derechos y responsabilidades de usuarios y desarrolladores.
+                La elección entre software propietario y software libre/código abierto depende de las necesidades específicas del usuario. Estas licencias definen los derechos y responsabilidades de usuarios y desarrolladores.
             </span>
         </div>
 
