--- a/apps/templates/includes/menu.html
+++ b/apps/templates/includes/menu.html
@@ -1,43 +1,43 @@
 <div class="mt-3">
     <div class="radio-buttons">
         <label class="radio" id="id_button_1">
-            <a href="{% url "repository" slug=slug %}">
+            <a href="{% url "repository" slug=software.slug %}">
                 <input type="radio" name="radio" checked="">
                 <span class="name">Información básica</span>
             </a>
         </label>
         <label class="radio" id="id_button_2">
-            <a href="{% url "version" slug=slug %}">
+            <a href="{% url "version" slug=software.slug %}">
                 <input type="radio" name="radio">
                 <span class="name">Caracterización</span>
             </a>
         </label>
         <label class="radio" id="id_button_3">
-            <a href="{% url "categorization" slug=slug %}">
+            <a href="{% url "requeriment_new" slug=software.slug %}">
                 <input type="radio" name="radio" >
-                <span class="name">Caracteristicas</span>
+                <span class="name">Caracteristicas funcionales</span>
             </a>
         </label>
         <label class="radio" id="id_button_4">
-            <a href="{% url "categorization" slug=slug %}">
+            <a href="{% url "requeriments" slug=software.slug %}">
                 <input type="radio" name="radio" >
                 <span class="name">Arquitectura</span>
             </a>
         </label>
         <label class="radio" id="id_button_5">
-            <a href="{% url "categorization" slug=slug %}">
+            <a href="{% url "categorization" slug=software.slug %}">
                 <input type="radio" name="radio" >
                 <span class="name">Instalación y configuración</span>
             </a>
         </label>
         <label class="radio" id="id_button_6">
-            <a href="{% url "categorization" slug=slug %}">
+            <a href="{% url "categorization" slug=software.slug %}">
                 <input type="radio" name="radio" >
                 <span class="name">Autor(es)</span>
             </a>
         </label>
         <label class="radio" id="id_button_7">
-            <a href="{% url "categorization" slug=slug %}">
+            <a href="{% url "categorization" slug=software.slug %}">
                 <input type="radio" name="radio" >
                 <span class="name">Solución de problemas</span>
             </a>
