--- a/apps/templates/repository/category.html
+++ b/apps/templates/repository/category.html
@@ -15,14 +15,14 @@
     <div class="container mt-5 w-50">
         <form method="POST">
             <h1 class="h3 fw-bold text-center">Háblanos un poco más de {{software}}</h1>
-            <span class="text-secondary text-center">Con la siguiente información se falicitará la busqueda y selección de Software adecuado para cada necesidad específica.</span>
+            <span class="text-secondary text-center">La siguiente información mejorará la busqueda y elección de software apropiado para cada necesidad específica.</span>
             {% csrf_token %}
             {{form.software}}
-            <div class="mb-3">
-                <label for="" class="fw-bold text-secondary mb-2">¿Para qué tarea o actividad principal está diseñado el software?</label>
+            <div class="mt-3">
+                <label for="" class="fw-bold text-secondary mb-2">¿Cuál es la principal actividad para la que está diseñado {{software}}?</label>
                 {{ form.type_software }}
             </div>
-            <div class="mb-3">
+            <div class="mt-3">
                 <label for="" class="fw-bold text-secondary mb-2">¿Cuales son las principales tareas que  realiza {{software}}?</label>
                 {{ form.tasks }}
             </div>
@@ -31,7 +31,7 @@
                 {{ form.type_public }}
             </div>
             <div class="mb-3">
-                <label for="" class="fw-bold text-secondary mb-2">{{software}} esta pensado para el sector de</label>
+                <label for="" class="fw-bold text-secondary mb-2">{{software}} esta pensado para desarrollarse en el sector de</label>
                 {{ form.type_industry }}
             </div>
             <div class="d-flex gap-2 p-2 w-50">
