--- a/apps/templates/repository/origin.html
+++ b/apps/templates/repository/origin.html
@@ -10,10 +10,10 @@
 <div class="container mt-5">
     <div class="w-50 d-flex flex-column justify-content-center">
         <h1 class="h4 fw-bold text-center">
-            Cuál es el modo de trabajo de {{software}}
+            Bajo que terminos se desarrollo {{software}}
         </h1>
         <span class="text-secondary text-center">
-            El mundo del software se rige por dos tipos de licencias que definen los derechos y responsabilidades de usuarios y desarrolladores.
+            Un desarrollador puede crear un software a partir de la creación de nuevos algoritmos o la modificación de algoritmos ya existentes. En ambos casos el código fuente esta protegido por derechos de autor.
         </span>
     </div>
 
